# Backend-ESP32-Flowsensor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  Untitled.ipynb  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: docker-publish.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: DOCKER.md  DOCKERHUB_DEPLOYMENT.md  GRAPHQL_EXAMPLES.md  RAILWAY_DEPLOYMENT.md  REST_API.md
examples/: esp32_flow_sensor_rest.ino  esp32_simulator.py
scripts/: init_database.py  migrate_add_pulse_fields.py
src/application/dto/: filling_dto.py  flow_reading_dto.py  pump_dto.py
src/application/use_cases/: control_pump.py  manage_filling.py  record_flow_reading.py
src/domain/entities/: filling.py  flow_reading.py  pump.py
src/domain/repositories/: filling_repository.py  flow_reading_repository.py  pump_repository.py
src/domain/services/: metrics_service.py
src/domain/value_objects/: metrics.py
src/infrastructure/controllers/: pump_controller.py
src/infrastructure/graphql/: resolvers.py  schema.py  server.py
src/infrastructure/notifications/: push_notification_service.py
src/infrastructure/persistence/: database.py  metrics_service_impl.py  repositories.py
src/infrastructure/rest/: __init__.py  routes.py
src/shared/config/: settings.py
src/shared/exceptions/: exceptions.py
